[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigo-time"
version = "0.1.3"
description = "Auto Time Complexity Estimator — empirically measure Big-O with one line"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "bigo contributors" }]
requires-python = ">=3.8"
keywords = ["big-o", "complexity", "performance", "profiling", "algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Mathematics",
]

# Zero hard dependencies — pure stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "build",
    "twine",
]
plot = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage   = "https://github.com/your-org/bigo"
Repository = "https://github.com/your-org/bigo"
Issues     = "https://github.com/your-org/bigo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bigo_time*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
